5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4013/executions/1573_1559.log
== TEST (2019-03-13 14:10:59) 
-- CODE:
frase = "ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA."
print(frase..upper())
-- ERROR:
File "XXXX", line 2
    print(frase..upper())
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 14:13:38) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print(frase..upper())
-- ERROR:
File "XXXX", line 2
    print(frase..upper())
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 14:16:09) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print(.upper()frase.)
-- ERROR:
File "XXXX", line 2
    print(.upper()frase.)
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 14:16:37) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print(frase.upper())
-- OUTPUT:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 14:16:43) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print(frase.upper())
-- EXECUTION TIME:
0.143057
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
